<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_nav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/text_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:entries="@array/array_date"
            android:prompt="@string/spinner_date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.22"
            android:gravity="center"
            android:text="@string/text_progress"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/progressSpinner"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.28"
            android:entries="@array/array_progress"
            android:prompt="@string/spinner_progress" />
    </LinearLayout>

    <ListView
        android:id="@+id/task_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>